[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmdl-diff"
version = "1.1.0"
description = "Professional CLI tool for comparing Power BI TMDL and PBIP project files with semantic diff."
authors = [
    { name = "nyy", email = "your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["power-bi", "tmdl", "pbip", "diff", "cli", "comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "packaging>=20.0"
]

[project.urls]
Homepage = "https://github.com/nayyarsyed/tmdl-diff"
Repository = "https://github.com/nayyarsyed/tmdl-diff.git"
"Bug Tracker" = "https://github.com/nayyarsyed/tmdl-diff/issues"
"Changelog" = "https://github.com/nayyarsyed/tmdl-diff/releases"

[project.scripts]
tmdl-diff = "main:app"

[tool.setuptools]
py-modules = ["main", "pbi_detector", "pbip_parser", "semantic_formatter"]
